--- a/package.json
+++ b/package.json
@@ -46,9 +46,26 @@
     "postpackage": "electron-packager ./ --out=./builds"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/material": "^5.0.4",
+    "@mui/styled-engine-sc": "^5.0.3",
+    "audio-react-recorder": "^1.0.4",
+    "bootstrap": "^4.6.0",
+    "dexie": "^3.0.3",
+    "downloadjs": "^1.4.7",
+    "history": "^5.0.1",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.0.0-rc.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-stopwatch-timer": "^1.0.0",
+    "sass": "^1.43.2",
+    "sass-loader": "^12.2.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
