--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@mui/material": "^5.0.4",
     "@mui/styled-engine-sc": "^5.0.3",
     "audio-react-recorder": "^1.0.4",
+    "blob-to-buffer": "^1.2.9",
     "bootstrap": "^4.6.0",
     "dexie": "^3.0.3",
     "downloadjs": "^1.4.7",
