made it save records and elabsed time in seperate folder per session

--- a/package.json
+++ b/package.json
@@ -51,11 +51,16 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/styled-engine-sc": "^5.0.3",
+    "audio-buffer-from": "^1.1.1",
     "audio-react-recorder": "^1.0.4",
+    "audiobuffer-to-wav": "^1.0.0",
+    "b64-to-blob": "^1.2.19",
     "blob-to-buffer": "^1.2.9",
     "bootstrap": "^4.6.0",
     "dexie": "^3.0.3",
     "downloadjs": "^1.4.7",
+    "electron-download-manager": "^2.1.2",
+    "fs-extra": "^10.0.0",
     "history": "^5.0.1",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
